@@ -368,6 +368,10 @@ server
 Optional values:
 
 .TP
+.I mountPoint
+Mount point for the stream on the server. Only works on Darwin Streaming
+Server, the original Shoutcast server does not support mount points
+.TP
 .I sampleRate
 The sample rate of the encoded mp3 output. If not specified, defaults
 to the value of the input sample rate.
